--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "IntegrationOptions": {
-    "CatsApiDomain": "https://api.thecatapi.com",
-    "CatsApiVersion": "/v1",
-    "CatBreedsEndpoint": "/breeds"
+    "PetStoreApiDomain": "https://petstore.swagger.io",
+    "PetStoreApiVersion": "/v2",
+    "PetsByStatusEndpoint": "/pet/findByStatus"
   }
 }
